# MNOS

./: .gitignore  CMakeLists.txt
benchmarks/: cpu_executor_benchmark.cpp  os_stage0_benchmark.cpp
docs/architecture/: engineering_standards.md  os_stage0.md  overview.md
docs/questions/: ques.md
include/mnos/core/: enum_map.hpp
include/mnos/cpu/common/: data_size.hpp  types.hpp
include/mnos/cpu/decode/: decoder.hpp  executable_image.hpp
include/mnos/cpu/execution/: cpu_state.hpp  executor.hpp  pipeline.hpp  program.hpp  trace.hpp
include/mnos/cpu/flags/: id.hpp  rflags.hpp
include/mnos/cpu/instruction/: condition_code.hpp  instrcution.hpp  instruction.hpp  opcode.hpp  operand.hpp
include/mnos/cpu/memory/: cache.hpp  memory_bus.hpp  memory_model.hpp  mmu.hpp  page_table_builder.hpp  page_table_walker.hpp  paging.hpp  physical_memory.hpp  tlb.hpp  tlb_shootdown.hpp
include/mnos/cpu/perf/: performance_model.hpp
include/mnos/cpu/register/: bank.hpp  id.hpp
include/mnos/cpu/system/: apic.hpp  core_id.hpp  core_topology.hpp  descriptor_tables.hpp  interrupt_vector.hpp  privilege.hpp  trap_controller.hpp  trap_frame.hpp
include/mnos/host/: console_options.hpp  debugger_session.hpp  debugger_text_layout.hpp  demo_user_program.hpp  machine_session.hpp  terminal_backend.hpp  terminal_runner.hpp
include/mnos/os/block/: block_device.hpp  buffer_cache.hpp
include/mnos/os/dev/: terminal.hpp
include/mnos/os/fs/: simple_fs.hpp  vfs.hpp
include/mnos/os/io/: file_descriptor.hpp
include/mnos/os/kernel/: boot_context.hpp  kernel.hpp  syscall.hpp
include/mnos/os/mm/: address.hpp  address_layout.hpp  address_space.hpp  page.hpp  page_fault_handler.hpp  physical_page_allocator.hpp
include/mnos/os/platform/: machine.hpp
include/mnos/os/proc/: copy_on_write.hpp  elf_loader.hpp  futex.hpp  process.hpp  process_context.hpp  process_id.hpp  user_loader.hpp
include/mnos/os/sched/: event.hpp  round_robin_scheduler.hpp  sleep_queue.hpp  smp_scheduler.hpp  thread_context.hpp  thread_id.hpp  thread_state.hpp  wait_queue.hpp
include/mnos/os/shell/: session.hpp  shell.hpp
source/cpu/common/: data_size.cpp
source/cpu/flags/: id.cpp  rflags.cpp
source/cpu/instruction/: instruction.cpp  opcode.cpp  operand.cpp
source/cpu/register/: bank.cpp  id.cpp
src/cpu/common/: data_size.cpp
src/cpu/decode/: decoder.cpp  executable_image.cpp
src/cpu/execution/: cpu_state.cpp  executor.cpp  pipeline.cpp  program.cpp  trace.cpp
src/cpu/flags/: id.cpp  rflags.cpp
src/cpu/instruction/: condition_code.cpp  instruction.cpp  opcode.cpp  operand.cpp
src/cpu/memory/: cache.cpp  memory_bus.cpp  memory_model.cpp  mmu.cpp  page_table_builder.cpp  page_table_walker.cpp  paging.cpp  physical_memory.cpp  tlb.cpp  tlb_shootdown.cpp
src/cpu/perf/: performance_model.cpp
src/cpu/register/: bank.cpp  id.cpp
src/cpu/system/: apic.cpp  core_topology.cpp  descriptor_tables.cpp  interrupt_vector.cpp  privilege.cpp  trap_controller.cpp  trap_frame.cpp
src/emulator/: main.cpp
src/host/: cocoa_gui_main.mm  console_main.cpp  console_options.cpp  debugger_session.cpp  debugger_text_layout.cpp  demo_user_program.cpp  machine_session.cpp  terminal_backend.cpp  terminal_runner.cpp
src/os/block/: block_device.cpp  buffer_cache.cpp
src/os/dev/: terminal.cpp
src/os/fs/: simple_fs.cpp  vfs.cpp
src/os/io/: file_descriptor.cpp
src/os/kernel/: boot_context.cpp  kernel.cpp  syscall.cpp  user_trap.cpp
src/os/mm/: address_layout.cpp  address_space.cpp  page.cpp  page_fault_handler.cpp  physical_page_allocator.cpp
src/os/platform/: machine.cpp
src/os/proc/: copy_on_write.cpp  elf_loader.cpp  futex.cpp  process.cpp  user_loader.cpp
src/os/sched/: event.cpp  round_robin_scheduler.cpp  sleep_queue.cpp  smp_scheduler.cpp  thread_context.cpp  thread_state.cpp  wait_queue.cpp
src/os/shell/: session.cpp  shell.cpp
src/os/tty/: console.cpp
tests/: smoke_test.cpp
tests/cpu/: core_test.cpp
tests/cpu/chaos/: executor_chaos_test.cpp  stage8_cache_chaos_test.cpp
tests/cpu/fuzz/: memory_executor_fuzz_test.cpp
tests/cpu/integration/: byte_executor_test.cpp  executor_error_test.cpp  executor_program_test.cpp  stage8_performance_test.cpp
tests/cpu/support/: cpu_test_helpers.hpp
tests/cpu/unit/: apic_test.cpp  cache_test.cpp  common_data_size_test.cpp  decoder_test.cpp  execution_state_test.cpp  instruction_test.cpp  memory_model_test.cpp  memory_test.cpp  paging_test.cpp  performance_model_test.cpp  pipeline_test.cpp  register_flags_test.cpp  system_test.cpp  tlb_shootdown_test.cpp
tests/host/: console_options_test.cpp  debugger_session_test.cpp  debugger_text_layout_test.cpp  machine_session_test.cpp  terminal_backend_test.cpp  terminal_runner_test.cpp
tests/os/chaos/: scheduler_chaos_test.cpp  stage10_sync_chaos_test.cpp  stage7_scheduler_chaos_test.cpp  stage9_smp_scheduler_chaos_test.cpp  thread_context_chaos_test.cpp
tests/os/fuzz/: address_page_fuzz_test.cpp  physical_page_allocator_fuzz_test.cpp
tests/os/integration/: kernel_boot_integration_test.cpp  stage10_user_process_test.cpp  stage11_syscall_trap_test.cpp  stage12_terminal_console_test.cpp  stage13_shell_io_test.cpp  stage14_shell_session_test.cpp  stage15_block_cache_test.cpp  stage15_file_syscall_shell_test.cpp  stage15_vfs_test.cpp  stage16_exec_wait_test.cpp  stage17_exec_file_test.cpp  stage18_user_abi_test.cpp  stage5_integration_test.cpp  stage7_integration_test.cpp  stage9_smp_scheduler_test.cpp
tests/os/unit/: address_page_test.cpp  address_space_test.cpp  kernel_boot_context_test.cpp  page_fault_handler_test.cpp  physical_page_allocator_test.cpp  process_scheduler_test.cpp  smp_scheduler_test.cpp  stage10_sync_cow_test.cpp  stage10_user_loader_test.cpp  stage11_syscall_abi_test.cpp  stage12_terminal_test.cpp  stage13_io_shell_test.cpp  stage14_shell_session_test.cpp  stage15_block_cache_test.cpp  stage15_simple_fs_test.cpp  stage17_elf_loader_test.cpp  stage7_sched_test.cpp  thread_context_test.cpp
tests/support/: deterministic_prng.hpp  elf64_test_image.hpp  test_assert.hpp
(+1 files in other folders)
